objects/Mil_User_Stub__c/Mil_User_Stub__c.object-meta.xml
<CustomObject>
    <label>Mil_User_Stub</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Mil_User_Stub ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mil_User_Stub</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>