objects/Mil_User_Stub__c/fields/Last_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_Date__c</fullName>
    <label>Last_Sync_Date</label>
    <type>DateTime</type>
</CustomField>