objects/Mil_User_Stub__c/fields/LastDataSensitiveRuleTriggerDate__c.field-meta.xml
<CustomField>
    <fullName>LastDataSensitiveRuleTriggerDate__c</fullName>
    <label>LastDataSensitiveRuleTriggerDate</label>
    <type>DateTime</type>
</CustomField>