objects/Mil_User_Stub__c/fields/MANUCLUB_ID__c.field-meta.xml
<CustomField>
    <fullName>MANUCLUB_ID__c</fullName>
    <label>MANUCLUB ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>