objects/Mil_User_Stub__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MANUCLUB_ID__c</columns>
    <columns>LastTimeSensitiveRuleTriggerDate__c</columns>
    <columns>LastDataSensitiveRuleTriggerDate__c</columns>
    <columns>Last_Sync_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>